manifests/deploy/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: code-server
spec:
  type: ExternalName
  externalName: demo-oauth2-proxy-v1.kubeplatform.svc.cluster.local

---

apiVersion: v1
kind: Service
metadata:
 name: code-server
 namespace: code-server
spec:
 ports:
 - port: 8443
   name: https
   protocol: TCP
 selector:
   app: code-server
 type: ClusterIP
